--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -78,3 +78,54 @@ body {
   left: 0;
   z-index: 5;
 }
+
+@keyframes animar {
+  0% {
+    -webkit-transform: translate(0px, 0px);
+  }
+
+  10% {
+    -webkit-transform: translate(10px, 0px);
+  }
+
+  20% {
+    -webkit-transform: translate(0px, 0px);
+  }
+
+  30% {
+    -webkit-transform: translate(10px, 0px);
+  }
+
+  40% {
+    -webkit-transform: translate(0px, 0px);
+  }
+
+  50% {
+    -webkit-transform: translate(10px, 0px);
+  }
+
+  60% {
+    -webkit-transform: translate(0px, 0px);
+  }
+
+  70% {
+    -webkit-transform: translate(10px, 0px);
+  }
+
+  80% {
+    -webkit-transform: translate(0px, 0px);
+  }
+
+  90% {
+    -webkit-transform: translate(10px, 0px);
+  }
+
+  100% {
+    -webkit-transform: translate(0px, 0px);
+  }
+}
+
+
+.temblor {
+  animation: animar .6s 1;
+}
